--- a/frontend/src/styles/production.scss
+++ b/frontend/src/styles/production.scss
@@ -54,6 +54,24 @@ main {
 	overflow: hidden;
 }
 
+body {
+	background-color: var(--black-0);
+}
+
 .to-front {
 	z-index: $toFrontIndex;
+}
+
+.view {
+	opacity: 0;
+
+	transition-property: opacity;
+	transition-duration: 0.3s;
+}
+
+.page__orbit-viewer {
+	
+	.view {
+		opacity: 1;
+	}
 }
